--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     width="123"
                     height="24">
                 </a>
-
+                
                 <button class="header__btn">
                 </button>
                 <div class="site-header__wrapper">
@@ -59,45 +59,76 @@
                 </div>
             </div>
         </section>
-        <section class="picture">
-            <div class="container">
-                <div class="picture__inner">
-                    <ul class="picture__list">
-                        <li class="picture__item">
-                            <picture>
-                                <source media="(min-width:400px )" srcset="./images/egg.png">
-                                <img src="./images/eggMobile.png" alt="egg"
-                                width="375" height="312">
-                            </picture>
-                            <div class="picture__wrapper">
-                                <h2 class="picture__title">
-                                    Transform your brand
-                                </h2>
-                                <p class="picture__text">
-                                    We are a full-service creative agency specializing in helping brands grow fast. 
-                                    Engage your clients through compelling visuals that do most of the marketing for you.
-                                </p>
-                                <a class="picture__link" href="#">LEARN MORE</a>
-                            </div>
-                        </li>
-                        <li class="picture__item">
-                            <img class="" src="./images/cupMobile.png" alt="Cup"
-                            width="375" height="312">
-                            <div class="picture__wrapper">
-                                <h2 class="picture__title">
-                                    Stand out to the right audience
-                                </h2>
-                                <p class="picture__text">
-                                    Using a collaborative formula of designers, researchers, 
-                                    photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-                                </p>
-                                <a class="picture__link" href="#">LEARN MORE</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <section class="services">
+            <ul class="services__list">
+                <li class="services__item">
+                    <picture class="services__image">
+                        <source media="(min-width:1120px )" srcset="./images/egg.png">
+                        <img class="image"  src="./images/eggMobile.png" alt="egg"
+                        width="320" height="312">
+                    </picture>
+                    
+                    <div class="services__wrapper">
+                        <div class="services__inner">
+                            <h2 class="services__title">
+                                Transform your brand
+                            </h2>
+                            <p class="services__text">
+                                We are a full-service creative agency specializing in helping brands grow fast. 
+                                Engage your clients through compelling visuals that do most of the marketing for you.
+                            </p>
+                        </div>
+                        <a class="services__link" href="#">LEARN MORE</a>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <picture class="services__image">
+                        <source media="(min-width:1120px )" srcset="./images/cup.png">
+                        <img class="image"  src="./images/cupMobile.png" alt="egg"
+                        width="320" height="312">
+                    </picture>
+                    <div class="services__wrapper">
+                        <div class="services__inner">
+                            <h2 class="services__title">
+                                Stand out to the right audience
+                            </h2>
+                            <p class="services__text">
+                                Using a collaborative formula of designers, researchers, 
+                                photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+                            </p>
+                        </div>
+                        <a class="services__link services__link--second" href="#">LEARN MORE</a>
+                    </div>
+                </li>
+            </ul>
         </section>
+        <section class="fruits">
+            <ul class="fruits__list">
+                <li class="fruits__item">
+                    <div class="fruits__wrapper">
+                        <h2 class="fruits__title first">
+                            Graphic Design
+                        </h2>
+                        <p class="fruits__text first">
+                            Great design makes you memorable. 
+                            We deliver artwork that underscores your brand message and captures potential clients’ attention.
+                        </p>
+                    </div>
+                </li>
+                <li class="fruits__item">
+                    <div class="fruits__wrapper">
+                        <h2 class="fruits__title">
+                            Photography
+                        </h2>
+                        <p class="fruits__text">
+                            Increase your credibility by getting 
+                            the most stunning, high-quality photos that improve your business image.
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section class="feedback"></section>
     </main>
 </body>
 </html>
