--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </div>
         </div>
     </header>
+
     <main class="site__main">
+
         <section class="hero">
             <div class="container">
                 <div class="hero__inner">
@@ -59,6 +61,7 @@
                 </div>
             </div>
         </section>
+
         <section class="services">
             <ul class="services__list">
                 <li class="services__item">
@@ -102,6 +105,7 @@
                 </li>
             </ul>
         </section>
+
         <section class="fruits">
             <ul class="fruits__list">
                 <li class="fruits__item">
@@ -128,7 +132,93 @@
                 </li>
             </ul>
         </section>
-        <section class="feedback"></section>
+
+        <section class="feedback">
+            <div class="container">
+                <div class="feedback__inner">
+                    <h2 class="feedback__title">
+                        CLIENT TESTIMONIALS
+                    </h2>
+                    <ul class="feedback__list">
+                        <li class="feedback__item">
+                            <div class="feedback__text-wrapper">
+                                <p class="feedback__text">
+                                    We put our trust in Sunnyside and they delivered,
+                                     making sure our needs were met and deadlines were always hit.
+                                </p>
+                            </div>
+                            <strong class="feedback__author">
+                                Emily R.
+                            </strong>
+                            <p class="feedback__position">
+                                Marketing Director
+                            </p>
+                        </li>
+                        <li class="feedback__item">
+                            <div class="feedback__text-wrapper">
+                                <p class="feedback__text">
+                                    Sunnyside’s enthusiasm coupled with their keen interest in our brand’s 
+                                    success made it a satisfying and enjoyable experience.
+                                </p>
+                            </div>
+                            <strong class="feedback__author">
+                                Thomas S.
+                            </strong>
+                            <p class="feedback__position">
+                                Chief Operating Officer
+                            </p>
+                        </li>
+                        <li class="feedback__item">
+                            <div class="feedback__text-wrapper">
+                                <p class="feedback__text">
+                                    Incredible end result! Our sales increased over 400% when we worked 
+                                    with Sunnyside. Highly recommended!
+                                </p>
+                            </div>
+                            <strong class="feedback__author">
+                                Jennie F.
+                            </strong>
+                            <p class="feedback__position">
+                                Business Owner
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="picture">
+            <ul class="picture__list">
+                <li class="picture__item">
+                    <picture class="pictures__image">
+                        <source media="(min-width:576px )" srcset="./images/milk.png">
+                        <img class="pic__image"  src="./images/milkMobile.png" alt="milk"
+                        width="288" height="288">
+                    </picture>
+                </li>
+                <li class="picture__item">
+                    <picture class="pictures__image">
+                        <source media="(min-width:576px )" srcset="./images/orange.png">
+                        <img class="pic__image"  src="./images/orangeMobile.png" alt="milk"
+                        width="288" height="288">
+                    </picture>
+                </li>
+                <li class="picture__item">
+                    <picture class="pictures__image">
+                        <source media="(min-width:576px )" srcset="./images/icecream.png">
+                        <img class="pic__image"  src="./images/icecreamMobile.png" alt="milk"
+                        width="288" height="288">
+                    </picture>
+                </li>
+                <li class="picture__item">
+                    <picture class="pictures__image">
+                        <source media="(min-width:576px )" srcset="./images/sugar.png">
+                        <img class="pic__image"  src="./images/sugarMobile.png" alt="milk"
+                        width="288" height="288">
+                    </picture>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
